syntax = "proto3";

package proto;

option go_package = "./;proto";

import "google/api/annotations.proto";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/greeter/say_hello"
      body: "*"
    };
  }
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID {
  string value = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
